--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,10 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          command: cat requirements/*.txt > requirements/combined.txt
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1.5-dependencies-{{ checksum "requirements/combined.txt" }}-{{ checksum "package.json" }}
+            - v1.5-dependencies-{{ checksum "requirements/dev.txt" }}-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1.5-dependencies-
 
@@ -24,7 +21,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install --exists-action w -r requirements/tests.txt
+            pip install --exists-action w -r requirements/dev.txt
 
       - run:
           name: Install Node Dependencies
@@ -36,7 +33,7 @@ jobs:
             - ./node_modules
             - ~/.cache/yarn
             - ~/.yarn/bin
-          key: v1.5-dependencies-{{ checksum "requirements/combined.txt" }}-{{ checksum "package.json" }}
+          key: v1.5-dependencies-{{ checksum "requirements/dev.txt" }}-{{ checksum "package.json" }}
 
   dredd:
     docker:
@@ -58,13 +55,10 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          command: cat requirements/*.txt > requirements/combined.txt
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1.5-dependencies-{{ checksum "requirements/combined.txt" }}-{{ checksum "package.json" }}
+            - v1.5-dependencies-{{ checksum "requirements/dev.txt" }}-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1.5-dependencies-
 
@@ -85,13 +79,10 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          command: cat requirements/*.txt > requirements/combined.txt
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1.5-dependencies-{{ checksum "requirements/combined.txt" }}-{{ checksum "package.json" }}
+            - v1.5-dependencies-{{ checksum "requirements/dev.txt" }}-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1.5-dependencies-
 
@@ -129,13 +120,10 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          command: cat requirements/*.txt > requirements/combined.txt
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1.5-dependencies-{{ checksum "requirements/combined.txt" }}-{{ checksum "package.json" }}
+            - v1.5-dependencies-{{ checksum "requirements/dev.txt" }}-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1.5-dependencies-
 
