--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,107 @@ use_parentheses = true
 path = "app/"
 exclude = "(migrations/|.venv/)"
 all = true
+
+[tool.poetry]
+name = "open-event-server"
+version = "1.19.1"
+description = "Open Event APIs Server"
+authors = ["Fossasia: https://fossasia.org"]
+
+[tool.poetry.dependencies]
+python = "~3.8"
+pycparser = "2.20"
+Flask = "1.1.2"
+Flask-Limiter = "1.4"
+Flask-Script = "2.0.6"
+Flask-SQLAlchemy = "2.4.4"
+Flask-Migrate = "2.5.3"
+Flask-Login = "0.5"
+Flask-Scrypt = "0.1.3.6"
+flask-jwt-extended = "3.25.0"
+flask-celeryext = "0.3.4"
+werkzeug = "1.0.1"
+omise = "0.9.0"
+requests-oauthlib = "1.3"
+icalendar = "4.0.7"
+requests = {version = "2.25.1", extras = ["security"]}
+psycopg2-binary = "2.8.6"
+SQLAlchemy-Utils = "0.36.8"
+itsdangerous = "1.1"
+humanize = "3.2.0"
+celery = "5.0.5"
+redis = "3.5.3"
+apscheduler = "3.6.3"
+pillow = "8.1.0"
+gunicorn = "20.0.4"
+boto = "2.49"
+geoip2 = "4.1.0"
+SQLAlchemy-Continuum = "1.3.11"
+bleach = "3.2.1"
+stripe = "2.55.1"
+xhtml2pdf = "0.2.5"
+flask-caching = "1.9.0"
+forex-python = "1.5"
+pycryptodome = "3.9.9"
+oauth2 = "~1.9.0"
+qrcode = "6.1"
+python-magic = "0.4.18"
+python-dotenv = "0.15.0"
+python-geoip = "1.2"
+"marrow.mailer" = {git = "https://github.com/LexMachinaInc/mailer.git", rev = "6933606"}
+"marrow.util" = {git = "https://github.com/LexMachinaInc/util.git", rev = "d820293"}
+flask-cors = "3.0.10"
+python-pentabarf-xml = "0.20"
+python-geoip-geolite2 = "2015.303"
+pycountry = "20.7.3"
+pytz = "2020.5"
+diff-match-patch = "20200713"
+blinker = "1.4"
+envparse = "0.2"
+flask-rest-jsonapi = {git = "https://github.com/fossasia/flask-rest-jsonapi.git", tag = "0.12.6.4"}
+wtforms = {version = "2.3.3", extras = ["email"]}
+flask-admin = "1.5.7"
+google-compute-engine = "2.8.13"
+factory_boy = "3.2.0"
+sentry-sdk = {version = "0.19.5", extras = ["flask"]}
+healthcheck = "1.3.3"
+elasticsearch-dsl = "7.0.0"
+flask-redis = "0.4"
+SQLAlchemy = "1.3.22"
+Flask-Elasticsearch = "0.2.5"
+paypalrestsdk = "1.13.1"
+eventlet = "0.30.0"
+gevent = "20.12.1"
+greenlet = "0.4.17" # Required for gevent
+pyyaml = "5.3.1"
+sendgrid = "6.5.0"
+marshmallow = "2.15.2"
+marshmallow-jsonapi = "0.23.2"
+WeasyPrint = "52.2"
+Flask-Babel = "2.0.0"
+xmltodict = "0.12.0"
+# GraphQL support
+graphene-sqlalchemy = "2.3.0"
+flask-graphql = "2.0.1"
+graphene-sqlalchemy-filter = "1.12.1"
+
+[tool.poetry.dev-dependencies]
+nose = "1.3.7"
+pylint = "2.6.0"
+pep8 = "1.7.1"
+isort = "5.7.0"
+black = "20.8b1"
+pre-commit = "2.9.3"
+pytype = "2020.12.23"
+pycln = "0.0.1b1"
+pyupgrade = "2.7.4"
+# For testing
+coverage = "5.3.1"
+dredd_hooks = "0.2"
+pytest = "6.2.1"
+pytest-cov = "2.10.1"
+objproxies = "0.9.4"
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
