--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,5 +138,5 @@ pytest-cov = "2.10.1"
 objproxies = "0.9.4"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
